ugly fix for sidebar buttons overlapping with scrollbar

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -88,7 +88,7 @@ img.pageLogo {
 	left: 0;
 }
 .openSaves {
-	right:0;
+	right:16px;
 	&.bookmark {
 		top:136px;
 	}
